# ipyvuetify_app

./: .coverage  .gitignore  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt
notebooks/: test.ipynb
notebooks/.ipynb_checkpoints/: test-checkpoint.ipynb
src/ipyvuetify_app/: __init__.py  app.py  router.py  router_example.py
tests/: test_ipyvuetify_app.py
