[tool.poetry]
name = "ipyvuetify_app"
version = "0.1.0"
description = ""
authors = ["stanislav <stas.prokopiev@gmail.com>"]
license = "MIT"
repository = "https://github.com/stas-prokopiev/ipyvuetify_app"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
ipyvuetify = "^1.8.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
