[tool.poetry]
name = "ipyvuetify_app"
version = "0.1.6"
description = ""
authors = ["stanislav <stas.prokopiev@gmail.com>"]
license = "MIT"
repository = "https://github.com/stas-prokopiev/ipyvuetify_app"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
ipyvuetify = "^1.8.1"
ipywidgets = "^7.6.5"
char = "^0.1.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
